[package]
name = "headesk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini_gl_fb = { git = "https://github.com/vivlim/mini_gl_fb.git" }
gl = "0.10.0"
winit = "0.25.0"
color-rs = "0.6.1"
opencv = "0.53.2"
image = "0.23.14"
